@@ -6479,6 +6479,248 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Fetching Live DataNodes by passing removeDecommissionedNode value as    * false- returns LiveNodeList with Node in Decommissioned state    * true - returns LiveNodeList without Node in Decommissioned state    * @throws InterruptedException    */
+annotation|@
+name|Test
+DECL|method|testCountOnDecommissionedNodeList ()
+specifier|public
+name|void
+name|testCountOnDecommissionedNodeList
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_HEARTBEAT_INTERVAL_KEY
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_HEARTBEAT_RECHECK_INTERVAL_KEY
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|nnTopology
+argument_list|(
+name|MiniDFSNNTopology
+operator|.
+name|simpleFederatedTopology
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|DFSClient
+name|client
+init|=
+name|getDfsClient
+argument_list|(
+name|cluster
+operator|.
+name|getNameNode
+argument_list|(
+literal|0
+argument_list|)
+argument_list|,
+name|conf
+argument_list|)
+decl_stmt|;
+name|validateCluster
+argument_list|(
+name|client
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|ArrayList
+argument_list|<
+name|ArrayList
+argument_list|<
+name|DatanodeInfo
+argument_list|>
+argument_list|>
+name|namenodeDecomList
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|ArrayList
+argument_list|<
+name|DatanodeInfo
+argument_list|>
+argument_list|>
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|namenodeDecomList
+operator|.
+name|add
+argument_list|(
+literal|0
+argument_list|,
+operator|new
+name|ArrayList
+argument_list|<
+name|DatanodeInfo
+argument_list|>
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Move datanode1 to Decommissioned state
+name|ArrayList
+argument_list|<
+name|DatanodeInfo
+argument_list|>
+name|decommissionedNode
+init|=
+name|namenodeDecomList
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|decommissionNode
+argument_list|(
+literal|0
+argument_list|,
+literal|null
+argument_list|,
+name|decommissionedNode
+argument_list|,
+name|AdminStates
+operator|.
+name|DECOMMISSIONED
+argument_list|)
+expr_stmt|;
+name|FSNamesystem
+name|ns
+init|=
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|DatanodeManager
+name|datanodeManager
+init|=
+name|ns
+operator|.
+name|getBlockManager
+argument_list|()
+operator|.
+name|getDatanodeManager
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|DatanodeDescriptor
+argument_list|>
+name|live
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|DatanodeDescriptor
+argument_list|>
+argument_list|()
+decl_stmt|;
+comment|// fetchDatanode with false should return livedecommisioned node
+name|datanodeManager
+operator|.
+name|fetchDatanodes
+argument_list|(
+name|live
+argument_list|,
+literal|null
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|1
+operator|==
+name|live
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// fetchDatanode with true should not return livedecommisioned node
+name|datanodeManager
+operator|.
+name|fetchDatanodes
+argument_list|(
+name|live
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|0
+operator|==
+name|live
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|/**    * Decommissioned node should not be considered while calculating node usage    * @throws InterruptedException    */
 annotation|@
 name|Test
